--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -1,6 +1,16 @@
+annotated-types==0.7.0
+APScheduler==3.11.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 idna==3.10
+pydantic==2.11.4
+pydantic-settings==2.9.1
+pydantic_core==2.33.2
 pyTelegramBotAPI==4.24.0
+python-dotenv==1.1.0
 requests==2.32.3
+typeguard==4.4.2
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+tzlocal==5.3.1
 urllib3==2.2.3
